# odoo-bringout-l10n_bs_hr_timesheet

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
l10n_bs_hr_timesheet/: __manifest__.py
l10n_bs_hr_timesheet/data/: work_types_data.xml
l10n_bs_hr_timesheet/i18n/: bs.po
l10n_bs_hr_timesheet/models/: project_task.py
